--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "handlebars": "^4.0.11",
     "hbs": "~4.0.1",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
