--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "handlebars": "^4.0.11",
     "hbs": "~4.0.1",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.9.8",
+    "node-sass-middleware": "^0.9.8",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
